objects/Billboard_Contract__c/Billboard_Contract__c.object-meta.xml
<CustomObject>
    <description>This is Billboard Contract object</description>
    <label>Billboard Contract</label>
    <nameField>
        <displayFormat>BBC-{00000}</displayFormat>
        <label>BBC#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billboard Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>