objects/Billboard_Contract__c/fields/BB_Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>BB_Vendor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BB Vendor Name</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Billboard Contracts</relationshipLabel>
    <relationshipName>Billboard_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>