objects/Billboard_Contract__c/fields/Billboard__c.field-meta.xml
<CustomField>
    <fullName>Billboard__c</fullName>
    <label>Billboard</label>
    <referenceTo>Billboard__c</referenceTo>
    <relationshipLabel>Billboard Contracts</relationshipLabel>
    <relationshipName>Billboard_Contracts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>