objects/Billboard_Contract__c/fields/Billboard_Type__c.field-meta.xml
<CustomField>
    <fullName>Billboard_Type__c</fullName>
    <label>Billboard Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billboard</fullName>
            </value>
            <value>
                <fullName>DOT</fullName>
            </value>
            <value>
                <fullName>Cost Share</fullName>
            </value>
            <value>
                <fullName>Land Lease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>