objects/Billboard_Contract__c/fields/Contract_Title__c.field-meta.xml
<CustomField>
    <fullName>Contract_Title__c</fullName>
    <label>Contract Title</label>
    <length>30</length>
    <type>Text</type>
</CustomField>