objects/Billboard_Contract__c/fields/No_of_Insertions__c.field-meta.xml
<CustomField>
    <fullName>No_of_Insertions__c</fullName>
    <label>No of Insertions</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>